README for haskell

--- a/code/haskell/package.yaml
+++ b/code/haskell/package.yaml
@@ -25,6 +25,7 @@ ghc-options:
   - -Wmissing-home-modules
   - -Wpartial-fields
   - -Wredundant-constraints
+  - -Wno-name-shadowing
 
 executables:
   sum-product-exe:
